Fix backwards compatibility with pre-Java11 build-tools users (#45633)